--- a/src/makefile
+++ b/src/makefile
@@ -1,2 +1,7 @@
-main:
-	g++ -o main main.cpp kDTree.cpp Dataset.o -I . -std=c++11
+all: main.exe
+
+main.exe: main.o kDTree.o Dataset.o
+	gcc -o main main.cpp kDTree.cpp Dataset.o -I . -std=c++11
+
+clean:
+	del  main
