--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
-all: main.exe
+all: main
 
-main.exe: main.o kDTree.o Dataset.o
-	gcc -o main main.cpp kDTree.cpp Dataset.o -I . -std=c++11
+main:
+	g++ -o main main.cpp kDTree.cpp Dataset.o -I . -std=c++11
 
 clean:
 	del  main
